# ksquant2

./: .gitignore  .travis.yml  AbstractScore.hs  AdjoinTies.hs  AdjoinTiesTest.hs  DurCalc.hs  DurCalcTest.hs  DursInput.hs  Enp.hs  Hello.hs  HelloTest.hs  IOHandler.hs  Input.hs  Internal.hs  Interval.hs  IntervalTest.hs  KS.hs  Lily.hs  Lisp.hs  LispScore.hs  LispTest.hs  Main.hs  MainUtils.hs  Makefile  Measure.hs  MeasureSiblingMerge.hs  MeasureTest.hs  MeasureToDurs.hs  MeasureToEnp.hs  MeasureToEnpTest.hs  MeasureToLily.hs  Options.hs  Quantize.hs  README  README.md  Setup.hs  SimpleFormat.hs  SimpleFormat2.hs  SimpleFormatTest.hs  StateTest.hs  (+11 more)
examples/: sample-input.lisp  simple-format-01.lisp  simple-format-02.lisp  simple-format-03.lisp
features/: cli-conventions.feature  cli-quantize-parameters.feature  durs-input-format.feature  durs-output-format.feature  errors.feature  informational.feature  ly-format.feature
features/support/: env.rb
hpc/: patch  r.sh  s.sh
lisp/: boxes-test.lisp  boxes.lisp  package.lisp  rt.lisp  test-runner.lisp
old/: Setup.hs  SubseqUtils.hs
osx/: setup.el
osx-utils/: ksquant2-dist.rb  link.sh
shell-tests/: 34-58-18-bar.lisp  accents-tied.lisp  accents.lisp  adjoin-ties-01.lisp  do-not-join-beams.lisp  enharmonic.lisp  expressions-plain-text.lisp  five-over-four.lisp  input-time-as-ratios.lisp  instrument-french-horn.lisp  just-four-quarters-and-measure-rest.lisp  just-four-quarters-rest.lisp  just-four-quarters.lisp  max-div-list-01.lisp  max-div-list-02.lisp  max-div-list-03.lisp  max-div-list-04.lisp  pitches.lisp  quarter-rest-keyword.lisp  quarter-rest-start.lisp  quarter-rest.lisp  quintuplets.lisp  tempo120.lisp  two-bars.lisp  two-halves.lisp
shell-tests/known-to-fail/: 16th-to-8th.lisp  instrument-french-horn.lisp  quintuplets.lisp
test-patches/: list-of-max-divs.pwgl
tools/: whitespace-cleanup.el
tutorial/: simple-test.pwgl  simple2score-defaults.pwgl
utils/: download-haskell-mode.sh  ksquant2-dist.rb  link.sh  setup.el  subseq-algo.lisp  test-cases.lisp
