Name:                haskell-quant
Version:             0.1
Description:         Super cool mega lambdas
License:             GPL
-- License-file:        LICENSE
Author:              Kilian Sprotte
Maintainer:          kilian.sprotte@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.2

Executable haskell-quant
  Main-is:           Main.hs
  Build-Depends:     base >= 3 && < 5, filepath, directory, process
  Extensions: MultiParamTypeClasses, FunctionalDependencies, FlexibleInstances, TypeSynonymInstances
