-- This file is part of KSQuant2.

-- Copyright (c) 2010 - 2011, Kilian Sprotte. All rights reserved.

-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU General Public License as published by
-- the Free Software Foundation, either version 3 of the License, or
-- (at your option) any later version.

-- This program is distributed in the hope that it will be useful,
-- but WITHOUT ANY WARRANTY; without even the implied warranty of
-- MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-- GNU General Public License for more details.

-- You should have received a copy of the GNU General Public License
-- along with this program.  If not, see <http://www.gnu.org/licenses/>.

Name:                ksquant2
Version:             0.1.10
Description:         Haskell implementation of simple2score from ksquant.
License:             GPL
License-file:        COPYING
Author:              Kilian Sprotte
Maintainer:          kilian.sprotte@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.2

Executable ksquant2
  Main-is:           Main.hs
  Build-Depends:     base, filepath, directory, process, parsec, either-unwrap
  ghc-options:       -Wall -Werror

test-suite tests
  type:           exitcode-stdio-1.0
  main-is:        Test.hs

  ghc-options:
    -Wall -Werror -main-is Test

  Build-Depends:  HUnit, QuickCheck, test-framework, test-framework-hunit,
                  test-framework-quickcheck2
